src/objects/Rep__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_line_1__c</fullName>
        <label>Address line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_line_2__c</fullName>
        <label>Address line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Market__c</fullName>
        <label>Authorized Market</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem / Petrochem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial / HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation / Water Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Water / Wastewater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Automation &amp; Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test &amp; Measurement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Authorized_Products__c</fullName>
        <label>Authorized Products</label>
        <picklist>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Industrial - Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electromagnetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluid Management &amp; Dispensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milwaukee Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racine Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger Meter - Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badger Meter - Mag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Industrial - Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electromagnetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluid Management &amp; Dispensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Milwaukee Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racine Vortex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remag Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Control Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Partner Contacts</relationshipLabel>
        <relationshipName>Partner_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Address_Memo__c</fullName>
        <label>Contract Address Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Counties_Memo__c</fullName>
        <label>Contract Counties Memo</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <label>Contract Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Product_Lines_Memo__c</fullName>
        <label>Contract Product Lines Memo</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Renewal Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract in Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Dropped</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FourthShift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pivotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_they_also_sell_competitive_products__c</fullName>
        <label>Do they also sell competitive products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Iinitiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Building Automation / HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical / Petrochemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation / Water Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Water / Waste Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Automation &amp; Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test &amp; Measurement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <picklist>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNITED STATES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_State__c</fullName>
        <label>Mailing State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Rental_House_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Wyco Customers Only</inlineHelpText>
        <label>Rental House Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rep_Disposition__c</fullName>
        <label>Disposition to Badger</label>
        <picklist>
            <picklistValues>
                <fullName>Very positive to Badger Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likes Badger Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral to Badger Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Disposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dislikes Badger Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very negative to Badger Meter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reports_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reports To</label>
        <referenceTo>Rep__c</referenceTo>
        <relationshipLabel>Partner Contacts</relationshipLabel>
        <relationshipName>Partner_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Channel_Partner__c</fullName>
        <label>Sales Channel Partner</label>
        <referenceTo>Sales_Channel_Partner__c</referenceTo>
        <relationshipLabel>Partner Contacts</relationshipLabel>
        <relationshipName>Partner_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Territory_Coverage__c</fullName>
        <inlineHelpText>Enter US or Canadian Postal Zip Codes, comma separated</inlineHelpText>
        <label>Territory Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WWW__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ZIP_Postal_Code__c</fullName>
        <label>ZIP / Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Partner Contact</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Reports_To__c</columns>
        <columns>Sales_Channel_Partner__c</columns>
        <columns>Rep_Disposition__c</columns>
        <columns>Authorized_Market__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>